Refactor: Improved code and fixed issues